Fixed a gap in the heading

--- a/AcsStatsWeb/ClientApp/src/grid.css
+++ b/AcsStatsWeb/ClientApp/src/grid.css
@@ -11,7 +11,7 @@
 app-root {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-gap: 1em;
+  grid-gap: 0 1em;
 }
 
 app-root > app-header,
